Fix dummy text, improved color schemes, and fixed about-section padding issues on mobile.

--- a/css/styles.css
+++ b/css/styles.css
@@ -136,7 +136,8 @@ li {
 	text-align: center;
 	line-height: 60px;
 	font-size: 26px;
-	padding-top: 10px;
+	background-color: #152A44;
+	color: white;
 }
 
 .summary-container {
@@ -182,9 +183,7 @@ hr {
   display: flex;
   width: calc(33.33% - 10px);
   float: left;
-  padding-bottom: 30px;
-  padding-left: 5px;
-  padding-right: 5px;
+	padding: 0px 5px;
   justify-content: center;
 }
 
@@ -218,8 +217,8 @@ hr {
   width: 100%;
   height: 100%;
   overflow: hidden;
-	padding: 10px 0px 0px 0px;
-	background-color: white;
+	padding: 10px 0px;
+	background-color: #AEC7D5;
 }
 
 .skills-container {
@@ -286,6 +285,7 @@ hr {
 @media only screen and (min-width: 0px) and (max-width: 1000px) {
 	.about-pane {
 		width: calc(100% - 10px);
+		padding: 10px 5px;
 	}
 
 	.body {
